--- a/07-Omnifood_v4/css/styles.css
+++ b/07-Omnifood_v4/css/styles.css
@@ -480,7 +480,7 @@
 /* ************ */
 
 .section-cta {
-    padding: 4.8rem 0 9.6rem 0;
+    padding: 4.8rem 0 12.8rem 0;
 }
 
 .cta {
@@ -554,4 +554,85 @@
         url("../img/eating.jpg");
     background-size: cover;
     background-position: center;
+}
+
+/* ************ */
+/* FOOTER       */
+/* ************ */
+
+.footer {
+	padding: 12.8rem 0;
+	border-top: 1px solid #eee;
+}
+
+.grid--footer {
+	grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+
+.logo-col {
+	display: flex;
+	flex-direction: column;
+}
+
+.footer-logo {
+	display: block;
+	margin-bottom: 3.2rem;
+}
+
+.social-links {
+	list-style: none;
+	display: flex;
+	column-gap: 2.4rem;
+}
+
+.social-icon {
+	height: 2rem;
+	width: 2rem;
+}
+
+.copyright {
+	margin-top: auto;
+	font-size: 1.4rem;
+	line-height: 1.6;
+	color: #767676;
+}
+
+.footer-heading {
+	font-size: 1.8rem;
+	font-weight: 500;
+	margin-bottom: 4rem;
+}
+
+.contacts {
+	font-size: 1.6rem;
+	font-style: normal;
+	line-height: 1.6;
+}
+
+.address {
+	font-style: normal;
+	font-size: 1.6rem;
+	line-height: 1.6;
+	margin-bottom: 2.4rem;
+}
+
+
+.footer-nav {
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	row-gap: 2.4rem;
+}
+
+.footer-link:link,
+.footer-link:visited {
+	text-decoration: none;
+	font-size: 1.6rem;
+	color: #767676;
+	transition: all 0.3s;
+}
+
+.footer-link:hover,
+.footer-link:active {
+	color: #555;
 }
