--- a/07-Omnifood_v6/css/general.css
+++ b/07-Omnifood_v6/css/general.css
@@ -76,79 +76,6 @@ body {
 /* GENERAL / REUSABLE COMPONENTS  */
 /* ****************************** */
 
-.heading-primary,
-.heading-secondary,
-.heading-tertiary {
-	font-weight: 700;
-	color: #333;
-	letter-spacing: -0.5px;
-}
-
-.heading-primary {
-	font-size: 5.2rem;
-	margin-bottom: 3.2rem;
-}
-
-.heading-secondary {
-	font-size: 3.6rem;
-	line-height: 1.2;
-	margin-bottom: 9.6rem;
-}
-
-.heading-tertiary {
-	font-size: 3rem;
-	line-height: 1.2;
-	margin-bottom: 3.2rem;
-}
-
-.subheading {
-	font-size: 1.4rem;
-	font-weight: 500;
-	text-transform: uppercase;
-	letter-spacing: 1.2px;
-	color: #cf711f;
-	display: block;
-	margin-bottom: 1.8rem;
-}
-
-.btn:link,
-.btn:visited {
-	display: inline-block;
-	text-decoration: none;
-	font-size: 2rem;
-	font-weight: 600;
-	padding: 1.2rem 3.2rem;
-	border-radius: 9px;
-	transition: all 0.3s;
-}
-
-.btn--full:link,
-.btn--full:visited {
-	background-color: #e67e22;
-	color: #fff;
-}
-
-.btn--full:hover, 
-.btn--full:active {
-	background-color: #cf711f;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-	background-color: #fff;
-	color: #555;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-	background-color: #fdf2e9;
-	box-shadow: inset 0 0 0 3px #fff;
-}
-
-.margin-right-sm {
-	margin-right: 1.2rem;
-}
-
 .container {
 	max-width: 120rem;
 	margin: 0 auto;
@@ -176,3 +103,130 @@ body {
 .grid--4-cols {
 	grid-template-columns: repeat(4, 1fr);
 }
+
+.grid--5-cols {
+	grid-template-columns: repeat(5, 1fr);
+}
+
+.heading-primary,
+.heading-secondary,
+.heading-tertiary {
+	font-weight: 700;
+	color: #333;
+	letter-spacing: -0.5px;
+}
+
+.heading-primary {
+	font-size: 5.2rem;
+	line-height: 1.05;
+	margin-bottom: 3.2rem;
+}
+
+.heading-secondary {
+	font-size: 3.6rem;
+	line-height: 1.2;
+	margin-bottom: 9.6rem;
+}
+
+.heading-tertiary {
+	font-size: 3rem;
+	line-height: 1.2;
+	margin-bottom: 3.2rem;
+}
+
+.subheading {
+	display: block;
+	font-size: 1.6rem;
+	font-weight: 500;
+	color: #cf711f;
+	text-transform: uppercase;
+	margin-bottom: 1.6rem;
+	letter-spacing: 0.75px;
+}
+
+.btn:link,
+.btn:visited {
+	display: inline-block;
+	text-decoration: none;
+	font-size: 2rem;
+	font-weight: 600;
+	padding: 1.6rem 3.2rem;
+	border-radius: 9px;
+	transition: all 0.3s;
+}
+
+.btn--full:link,
+.btn--full:visited {
+	background-color: #e67e22;
+	color: #fff;
+}
+
+.btn--full:hover, 
+.btn--full:active {
+	background-color: #cf711f;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+	background-color: #fff;
+	color: #555;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+	background-color: #fdf2e9;
+	box-shadow: inset 0 0 0 3px #fff;
+}
+
+.link:link,
+.link:visited {
+	display: inline-block;
+	color: #e67e22;
+	text-decoration: none;
+	border-bottom: 1px solid currentColor;
+	padding-bottom: 0.2rem;
+	transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+	color: #cf711f;
+	border-bottom: 1px solid transparent;
+}
+
+.list {
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
+.list-item {
+	font-size: 1.8rem;
+	display: flex;
+	align-items: center;
+	gap: 1.6rem;
+}
+
+.list-icon {
+	height: 3rem;
+	width: 3rem;
+	color: #e67e22;
+}
+
+.margin-right-sm {
+	margin-right: 1.2rem !important;
+}
+
+.margin-bottom-md {
+	margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+	text-align: center;
+}
+
+strong {
+	font-weight: 500;
+}
+
