--- a/07-Omnifood_v7/css/general.css
+++ b/07-Omnifood_v7/css/general.css
@@ -52,3 +52,70 @@ medium: 11px
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 
 */
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+html {
+	/* 10px / 16px (browser font) = 0.625 = 62.5% */
+	font-size: 62.5%;
+}
+
+body {
+	font-family: "Rubik", sans-serif;
+	line-height: 1;
+	font-weight: 400;
+	color: #555;
+}
+
+/* ***************************** */
+/* GENERAL / REUSABLE COMPONENTS */
+/* ***************************** */
+
+.heading-primary {
+	font-size: 5.2rem;
+	font-weight: 700;
+	color: #333;
+	letter-spacing: -0.5px;
+	line-height: 1.05;
+	margin-bottom: 3.2rem;
+}
+
+.btn:link,
+.btn:visited {
+	display: inline-block;
+	padding: 1.6rem 3.2rem;
+	font-size: 2rem;
+	font-family: inherit;
+	border-radius: 9px;
+	text-decoration: none;
+	font-weight: 600;
+	transition: all 0.3s;
+}
+
+.btn--full:link,
+.btn--full:visited {
+	background-color: #e67e22;
+	color: #fff;
+	margin-right: 1.2rem;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+	background-color: #fff;
+	color: #555;
+}
+
+.btn--full:hover,
+.btn--full:active {
+	background-color: #cf711f;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+	background-color: transparent;
+	box-shadow: inset 0 0 0 3px #fff;
+}
