--- a/07-Omnifood_v8/css/general.css
+++ b/07-Omnifood_v8/css/general.css
@@ -73,12 +73,65 @@ body {
 /* REUSABLE COMPONENTS 	 */
 /* ********************* */
 
+.container {
+	max-width: 120rem;
+	margin: 0 auto;
+	padding: 0 3.2rem;
+}
+
+.grid {
+	display: grid;
+	row-gap: 9.6rem;
+	column-gap: 6.4rem;
+}
+
+.grid--2-cols {
+	grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3-cols {
+	grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--4-cols {
+	grid-template-columns: repeat(4, 1fr);
+}
+
+.grid--5-cols {
+	grid-template-columns: repeat(5, 1fr);
+}
+
+.grid--center-v {
+	align-items: center;
+}
+
 .heading-primary {
 	font-size: 5.2rem;
 	font-weight: 700;
 	color: #333;
 	letter-spacing: -0.5px;
+	margin-bottom: 4.8rem;
+}
+
+.heading-secondary {
+	font-size: 4.2rem;
+	margin-bottom: 9.6rem;
+}
+
+.heading-tertiary {
+	font-size: 3rem;
+	color: #333;
 	margin-bottom: 3.2rem;
+}
+
+.subheading {
+	display: block;
+	font-size: 1.6rem;
+	font-weight: 600;
+	color: #cf711f;
+	text-transform: uppercase;
+	letter-spacing: 1.5px;
+	margin-bottom: 1.8rem;
 }
 
 .btn:link,
