--- a/07-Omnifood_v8/css/style.css
+++ b/07-Omnifood_v8/css/style.css
@@ -3,49 +3,49 @@
 /* ***************** */
 
 .header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	height: 9.6rem;
-	padding: 0 4.8rem;
-	background-color: #fdf2e9;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 9.6rem;
+    padding: 0 4.8rem;
+    background-color: #fdf2e9;
 }
 
 .logo {
-	height: 2.2rem;
+    height: 2.2rem;
 }
 
 .main-nav-list {
-	list-style: none;
-	display: flex;
-	column-gap: 1.8rem;
+    list-style: none;
+    display: flex;
+    column-gap: 1.8rem;
 }
 
 .main-nav-link:link,
 .main-nav-link:visited {
-	text-decoration: none;
-	font-size: 1.8rem;
-	font-weight: 500;
-	color: #555;
-	transition: all 0.3s;
+    text-decoration: none;
+    font-size: 1.8rem;
+    font-weight: 500;
+    color: #555;
+    transition: all 0.3s;
 }
 
 .main-nav-link:hover,
 .main-nav-link:active {
-	color: #e67e22;
+    color: #e67e22;
 }
 
 .nav-cta:link,
 .nav-cta:visited {
-	background-color: #e67e22;
-	border-radius: 9px;
-	padding: 1rem 2.4rem;
-	color: #fff;
+    background-color: #e67e22;
+    border-radius: 9px;
+    padding: 1rem 2.4rem;
+    color: #fff;
 }
 
 .nav-cta:hover,
 .nav-cta:active {
-	background-color: #cf711f;
+    background-color: #cf711f;
 }
 
 /* ***************** */
@@ -53,54 +53,140 @@
 /* ***************** */
 
 .section-hero {
-	background-color: #fdf2e9;
-	padding: 4.8rem 0;
+    background-color: #fdf2e9;
+    padding: 4.8rem 0;
 }
 
 .hero {
-	max-width: 130rem;
-	margin: 0 auto;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	column-gap: 9.6rem;
-	align-items: center;
+    max-width: 130rem;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 9.6rem;
+    align-items: center;
 }
 
 .hero-description {
-	font-size: 2rem;
-	line-height: 1.5;
-	margin-bottom: 4.8rem;
+    font-size: 2rem;
+    line-height: 1.5;
+    margin-bottom: 4.8rem;
 }
 
 .hero-img {
-	width: 100%;
+    width: 100%;
 }
 
 .delivered-meals {
-	margin-top: 8rem;
-	display: flex;
-	align-items: center;
-	column-gap: 1.8rem;
+    margin-top: 8rem;
+    display: flex;
+    align-items: center;
+    column-gap: 1.8rem;
 }
 
 .delivered-imgs img {
-	height: 4.8rem;
-	width: 4.8rem;
-	border-radius: 50%;
-	margin-right: -15px;
-	border: 3px solid #fdf2e9;
+    height: 4.8rem;
+    width: 4.8rem;
+    border-radius: 50%;
+    margin-right: -15px;
+    border: 3px solid #fdf2e9;
 }
 
 .delivered-imgs img:last-child {
-	margin-right: 0;
+    margin-right: 0;
 }
 
 .delivered-text {
-	font-size: 1.8rem;
-	font-weight: 600;
+    font-size: 1.8rem;
+    font-weight: 600;
 }
 
 .delivered-text span {
-	color: #cf711f;
-	font-weight: 700;
+    color: #cf711f;
+    font-weight: 700;
+}
+
+/* ***************** */
+/* FEATURED			 */
+/* ***************** */
+
+.section-featured {
+    padding: 4.8rem 0;
+}
+
+.heading-featured-in {
+    font-size: 1.4rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: center;
+    color: #888;
+    margin-bottom: 2.4rem;
+    letter-spacing: 1.2px;
+}
+
+.logos {
+    display: flex;
+    column-gap: 4.8rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.logos img {
+    height: 3.2rem;
+    filter: brightness(0);
+    opacity: 50%;
+}
+
+/* ***************** */
+/* HOW   			 */
+/* ***************** */
+
+.section-how {
+    padding: 9.6rem 0;
+}
+
+.step-number {
+    font-size: 8.6rem;
+    font-weight: 700;
+    color: #ccc;
+    margin-bottom: 1.6rem;
+}
+
+.step-description {
+    font-size: 1.8rem;
+    line-height: 1.6;
+}
+
+.step-img-box {
+	position: relative;
+	display: flex;
+	justify-content: center;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+	content: "";
+	display: block;
+	position: absolute;
+	top: 50%;
+	right: 50%;
+	border-radius: 50%;
+	transform: translate(50%, -50%);
+}
+
+.step-img-box::before {
+	width: 60%;
+	padding-bottom: 60%;
+	background-color: #fdf2e9;
+	z-index: -2;
+}
+
+.step-img-box::after {
+	width: 45%;
+	padding-bottom: 45%;
+	background-color: #fae5d3;
+	z-index: -1;
+}
+
+.step-img {
+	height: 40rem;
 }
