--- a/07-Omnifood_v8/css/style.css
+++ b/07-Omnifood_v8/css/style.css
@@ -302,3 +302,65 @@
 	text-align: center;
 
 }
+
+/* ***************** */
+/* TESTIMONIALS		 */
+/* ***************** */
+
+.section-testimonials {
+	background-color: #fdf2e9;
+	padding: 2rem 0;
+	display: grid;
+	grid-template-columns: 55% 45%;
+	align-items: center;
+	/* column-gap: 4.8rem; */
+}
+
+.testimonials-container {
+	padding: 0 9.6rem;
+}
+
+.testimonials {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	row-gap: 4.8rem;
+	column-gap: 8rem;
+}
+
+.testimonial-img {
+	height: 6.4rem;
+	width: 6.4rem;
+	border-radius: 50%;
+	margin-bottom: 1.2rem;
+}
+
+.testimonial-text {
+	font-size: 1.8rem;
+	line-height: 1.8;
+	margin-bottom: 2.4rem;
+}
+
+.testimonial-name {
+	font-size: 1.6rem;
+	color: #6f6f6f;
+}
+
+.gallery {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: 1.2rem;
+}
+
+.gallery-item {
+	overflow: hidden;
+}
+
+.gallery-item img {
+	width: 100%;
+	transition: all 0.4s;
+}
+
+.gallery-item img:hover {
+	transform: scale(1.2);
+}
+
